Fix spacing on artist show page

--- a/app/assets/stylesheets/components/_artist_show.scss
+++ b/app/assets/stylesheets/components/_artist_show.scss
@@ -18,7 +18,6 @@
 
 .artist-hero img {
     width: 180px;
-    height: 180px;
     border-radius: 100%;
     margin: 50px 0 50px 0;
 }
@@ -33,6 +32,7 @@
 
 .artist-show h3 {
     color: white;
+    margin-top: 10px;
     margin-left: 40px;
     margin-bottom: 10px;
     font-size: 20px;
